examples/test/testpolicy530.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy530
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key48: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value30
          key7: value11
          key23: value31
      podSelector:
        matchLabels:
          key21: value49
          key41: value17
